# sokosolve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitset.h  example.py  setup.py  solver.c  solver.h  solver_types.h  test.c
sokosolve/: __init__.py  build_binding.py  sokosolve.py
test_cases/: tests_4x4.txt  tests_7x7.txt  tests_9x9.txt  tests_rect.txt
